--- a/paper/sections/background_pinns.tex
+++ b/paper/sections/background_pinns.tex
@@ -16,7 +16,7 @@ Activation layers map $\vz^{(l-1)}\mapsto \vz^{(l)} \sigma(\vz^{(l-1)})$ element
 
 \subsection{Energy Natural Gradients for Physics-Informed Neural Networks}
 Let us consider a domain $\Omega\subseteq\mathbb R^d$ and the partial differential equation
-\begin{align*}\tag{PE}\label{eq:PE}
+\begin{align*}
   -\mathcal{L} u = f \quad \text{in }\Omega\,,
                    \qquad
   u = g \quad \text{on }\partial\Omega\,,
@@ -25,9 +25,14 @@ with square-integrable right hand side $f\in L^2(\Omega)$ and twice continuously
 $\mathcal{L}$ denotes a differential operator, e.g.\,the Laplacian $\mathcal{L} u = \Delta u = \sum_{i=1}^d \partial_{\evx_i}^2 u$.
 We parametrize $u$ using a neural network and train its parameters $\vtheta$ to minimize the loss
 \begin{align}\label{eq:pinn-loss}
+  \!\!\!\!\!\!
   L(\vtheta)
   &=
-    \underbrace{\frac{1}{2N_\Omega} \sum_{n=1}^{N_\Omega} (\mathcal{L} u_\vtheta(\vx_i) + f(\vx_n))^2}_{\eqqcolon L_\Omega(\vtheta)} + \underbrace{\frac{1}{2N_{\partial\Omega}}\sum_{n=1}^{N_{\partial\Omega}} ( u_\vtheta(\vx^\text{b}_n) - g(\vx^\text{b}_n))^2}_{\eqqcolon L_{\partial\Omega}(\vtheta)},
+    \frac{1}{2N_\Omega} \sum_{n=1}^{N_\Omega} (\mathcal{L} u_\vtheta(\vx_i) + f(\vx_n))^2
+    +
+    \frac{1}{2N_{\partial\Omega}}\sum_{n=1}^{N_{\partial\Omega}} ( u_\vtheta(\vx^\text{b}_n) - g(\vx^\text{b}_n))^2
+    \eqqcolon
+    L_\Omega(\vtheta) + L_{\partial\Omega}(\vtheta)
 \end{align}
 with points $\{\vx_n \in \Omega \}_{n=1}^{N_\Omega}$ from the domain's interior, and points $\{\vx^\text{b}_n \in \partial\Omega \}_{n=1}^{N_{\partial\Omega}}$ on its boundary.\footnote{The second regression loss can also include other constraints like measurement data.}
 
