[ADD] 9 pages, content complete [no ci]

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -692,3 +692,10 @@
   booktitle =    {International Conference on Machine Learning (ICML)},
   year =         2019,
 }
+
+@article{clarke2023adam,
+  title =        {Adam through a Second-Order Lens},
+  author =       {Clarke, Ross M and Su, Baiyu and Hern{\'a}ndez-Lobato,
+                  Jos{\'e} Miguel},
+  year =         2023
+}
